css/P1-Contact.css
@import url("https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap");

/* P1-Contact.css - Persona 1 Demon Contact Guide styles */

h1 {
    font-family: 'ZCOOL KUAILE';
    text-align: center;
}

body {
    background-color: #b07fff;
    font-family: 'Open Sans', sans-serif;        
    text-align: center;
    padding: 2em;
}

.character-filter {
    margin-bottom: 1em;
}

.demon-list {
    margin-top: 2em;
}

.demon-entry {
    border-bottom: 1px solid #ccc;
    padding: 0.5em 0;
}

.eager-values {
    margin-left: 1em;
    font-size: 0.95em;
}

.char-checkbox {
    margin-right: 0.5em;
}

.entry {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.5em 0;
}

